Support Java 11 and jetty-maven-plugin